# staple

./: .gitignore  Cargo.toml  build.rs  check.sh  index.html  readme.md  rss.xml  update_local_new_version.sh
.cargo/: config.toml
.github/: .codecov.yml
.github/workflows/: build-latest.yml  release-with-version.yml  rust.yml
about/: index.html
articles/: 1.html  2.html  3.html  4.html  hello.html  test-markdown-file.html
articles/test-markdown-file/: index.html
data/: live_reload.html
demo/: Staple.toml
demo/articles/: hello.md  test.md
demo/data/: index.toml
demo/pages/: about.md  about.toml
demo/templates/rubble/: article.html  index.html
demo/templates/staple/: article.html  index.html  page.html
hello/: index.html
homepage/: CNAME  Staple.toml
homepage/articles/: hello.md  test.md
homepage/data/: builtin-function.md  develop-mode.md  get-started.md  hello-hello.json  index.json  innerFolder.json  innerFolder2.md  markdown-ext.md  page-access-index-content.md  template.md  test.md
homepage/public/: index.html  rss.xml
homepage/public/about/: index.html
inner/folder/: index.html
inner/folder2/: index.html
page-access-index-content/: index.html
src/: app.rs  article.pest  article.rs  article_parser.lalrpop  ast.rs  command.rs  config.rs  constants.rs  error.rs  main.rs  template.rs
src/command/: add.rs  build.rs  develop.rs  init.rs  list.rs  mod.rs  new.rs  show.rs
src/data/: json.rs  markdown.rs  mod.rs
src/server/: mod.rs  ws.rs
src/util/: filter.rs  lock.rs  mod.rs
test-markdown-file/: index.html
(+14 files in other folders)
