[package]
name = "staple"
description = "static blog generator"
version = "0.1.0"
authors = ["Kilerd Chan <blove694@gmail.com>"]
license = "MIT"
edition = "2018"
build = "build.rs"

[dependencies]
structopt = "0.3.3"
file-lock = "1.1.20"
tera = "0.11.20"
serde = "1.0.101"
serde_derive = "1.0.101"
toml = "0.5.3"
thiserror = "1.0.2"
lalrpop-util = "0.17.2"
regex = "1.3.1"

[build-dependencies]
lalrpop = "0.17.2"
